plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket' 	// websocket 관련
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' 	// redis 관련
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' //S3 관련
	implementation 'io.openvidu:openvidu-java-client:2.28.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3' 		// jwt 관련
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'		// jwt 관련
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'	// jwt 관련
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'	// OAuth2 관련
}

tasks.named('test') {
	useJUnitPlatform()
}
